--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -75,6 +75,8 @@
               %li.govuk-footer__inline-list-item
                 = link_to t("footer.link.terms_of_service"), page_path("terms_of_service"), class: "govuk-footer__link"
               %li.govuk-footer__inline-list-item
+                = link_to t("footer.link.service_performance"), "https://beisodahelp.zendesk.com/hc/en-gb/sections/1500001330861-Service-Performance", class: "govuk-footer__link"
+              %li.govuk-footer__inline-list-item
                 = link_to t("footer.link.support_site"), "https://beisodahelp.zendesk.com/", class: "govuk-footer__link"
 
             %svg.govuk-footer__licence-logo{focusable: "false", height: "17", role: "presentation", viewbox: "0 0 483.2 195.7", width: "41", xmlns: "http://www.w3.org/2000/svg"}
