Sum programme and child activity transactions in XML
Co-authored-by: CristinaRO <cristina@dxw.com>

--- a/app/views/staff/organisations/show.xml.haml
+++ b/app/views/staff/organisations/show.xml.haml
@@ -2,5 +2,5 @@
 %iati-activities{"version" => "#{IATI_VERSION.gsub('_', '.')}",
 "generated-datetime" => "#{Time.now.strftime("%Y-%m-%dT%H:%M:%S")}"}
   - @activities.each do |activity|
-    = render partial: "staff/shared/xml/activity", locals: { activity: activity, reporting_organisation: @reporting_organisation, transactions: activity.transactions, budgets: activity.budgets, planned_disbursements: activity.latest_planned_disbursements }
+    = render partial: "staff/shared/xml/activity", locals: { activity: activity, reporting_organisation: @reporting_organisation, transactions: activity.reportable_transactions_for_level, budgets: activity.budgets, planned_disbursements: activity.latest_planned_disbursements }
 
