Allow matched effort providers to be created

--- a/app/views/staff/organisations/_form.html.haml
+++ b/app/views/staff/organisations/_form.html.haml
@@ -1,4 +1,5 @@
 = f.govuk_error_summary
+= f.hidden_field :role
 = f.govuk_text_field :name
 .uppercase-input
   = f.govuk_text_field :beis_organisation_reference
