TransactionUploadsController uses upload? check
Use our new `ReportPolicy#upload?` check. Also, added controller specs
that checks that the 'upload' button appears at appropriate times.

When viewing the transaction upload page associated with a report that
is currently not editable, a message is shown instead of the upload
form.

NB: It is highly unlikely users will see this message, as the upload
buttons will soon be removed from the Report pages too.

--- a/app/views/staff/transaction_uploads/new.html.haml
+++ b/app/views/staff/transaction_uploads/new.html.haml
@@ -19,11 +19,17 @@
       %p.govuk-body
         = t("action.transaction.download.hint_html")
 
-      .govuk-body.upload-form
-        = form_for @report_presenter, url: report_transaction_upload_path(@report_presenter) do |f|
+      - if policy(@report_presenter).upload?
+        .govuk-body.upload-form
+          = form_for @report_presenter, url: report_transaction_upload_path(@report_presenter) do |f|
 
-          = f.govuk_file_field :transaction_csv,
-            label: { text: t("form.label.transaction.csv_file") },
-            hint: { text: t("form.hint.transaction.csv_file") }
+            = f.govuk_file_field :transaction_csv,
+              label: { text: t("form.label.transaction.csv_file") },
+              hint: { text: t("form.hint.transaction.csv_file") }
 
-          = f.govuk_submit t("action.transaction.upload.button")
+            = f.govuk_submit t("action.transaction.upload.button")
+      - else
+        %h2.govuk-heading-m= t("form.label.transaction.csv_file")
+
+        %p.govuk-body
+          = "This report is #{@report_presenter.state.downcase}, so CSV upload is unavailable."
