--- a/app/views/staff/activity_uploads/new.html.haml
+++ b/app/views/staff/activity_uploads/new.html.haml
@@ -14,11 +14,17 @@
       %p.govuk-body
         = t("action.activity.download.hint_html")
 
-      .govuk-body.upload-form
-        = form_for @report_presenter, url: report_activity_upload_path(@report_presenter) do |f|
+      - if policy(@report_presenter).upload?
+        .govuk-body.upload-form
+          = form_for @report_presenter, url: report_activity_upload_path(@report_presenter) do |f|
 
-          = f.govuk_file_field :activity_csv,
-            label: { text: t("form.label.activity.csv_file") },
-            hint: { text: t("form.hint.activity.csv_file") }
+            = f.govuk_file_field :activity_csv,
+              label: { text: t("form.label.activity.csv_file") },
+              hint: { text: t("form.hint.activity.csv_file") }
 
-          = f.govuk_submit t("action.activity.upload.button")
+            = f.govuk_submit t("action.activity.upload.button")
+      - else
+        %h2.govuk-heading-m= t("form.label.activity.csv_file")
+
+        %p.govuk-body
+          = "This report is #{@report_presenter.state.downcase}, so CSV upload is unavailable."
