Send report approved email notification to BEIS users
Previously, only delivery partner users belonging to the organisation whose report has been approved would be notified by email.

Some BEIS users want to receive notifications when any report is approved.

We don’t have a way to selectively send only to some BEIS users but not others, so for now we’ll send it to all of them and iterate if needed.

--- a/app/views/report_mailer/approved.text.erb
+++ b/app/views/report_mailer/approved.text.erb
@@ -1,11 +1,3 @@
-BEIS have approved your report.
-
-<%= render partial: "report" %>
-
-# What happens next?
-
-No further action is required.
-
-You can use the Activities page in RODA to review the data submitted in this and previous reports.
+<%= render partial: "approved_#{@role}" %>
 
 <%= render partial: "footer" %>
