--- a/app/views/staff/reports/variance.html.haml
+++ b/app/views/staff/reports/variance.html.haml
@@ -6,17 +6,14 @@
       %h1.govuk-heading-xl
         = t("page_title.report.show", report_fund: @report_presenter.fund.source_fund.name, report_financial_quarter: @report_presenter.financial_quarter_and_year)
 
-      %dl.govuk-summary-list.govuk-summary-list
-        .govuk-summary-list__row
-          %dt.govuk-summary-list__key
-            = t("form.label.report.state")
-          %dd.govuk-summary-list__value
-            = @report_presenter.state
-
     - if policy(@report_presenter).download?
       = render partial: "staff/reports/download", locals: { report_presenter: @report_presenter }
 
-  = render partial: "staff/reports/actions", locals: { report_presenter: @report_presenter }
+    .govuk-grid-column-two-thirds
+      = render partial: "staff/reports/summary"
+
+    .govuk-grid-column-full
+      = render partial: "staff/reports/actions", locals: { report_presenter: @report_presenter }
 
   .govuk-grid-row
     .govuk-grid-column-full
