Add spacing to Organisation action links
On the Organisation index page there was no spacing between the View and
Edit links.

We added the ability to pass extra css classes to a11y_action_link so
now we can pass in a standard GOVUK margin override class to give us
what we need.

--- a/app/views/staff/organisations/_table.html.haml
+++ b/app/views/staff/organisations/_table.html.haml
@@ -35,4 +35,4 @@
                     - if policy(organisation).show?
                       = a11y_action_link(t("default.link.show"), organisation_path(organisation), organisation.name)
                     - if policy(organisation).edit?
-                      = a11y_action_link(t("default.link.edit"), edit_organisation_path(organisation), organisation.name)
+                      = a11y_action_link(t("default.link.edit"), edit_organisation_path(organisation), organisation.name, ["govuk-!-margin-left-3"])
