Use a helper to generate the support email link
This saves us having to have the application knowledge all
over the place, and also uses the `mail_to` helper, rather
than `link_to`, which meant we had to generate the
`mailto` href ourself with string interpolation, which was a
bit messy.

--- a/app/views/report_mailer/_footer.text.erb
+++ b/app/views/report_mailer/_footer.text.erb
@@ -2,7 +2,7 @@
 
 If you need assistance please contact RODA support at:
 
-support@beisodahelp.zendesk.com
+<%= ApplicationHelper::SUPPORT_EMAIL_ADDRESS %>
 
 Or visit the BEIS ODA Help centre:
 
