--- a/app/views/shared/_help_and_support.html.haml
+++ b/app/views/shared/_help_and_support.html.haml
@@ -6,4 +6,4 @@
       If you have any questions or have any problems, please contact the RODA support team
 
     %p.govuk-body
-      = mail_to "support@beisodahelp.zendesk.com", "support@beisodahelp.zendesk.com", class: "govuk-link"
+      = support_email_link
