Replace all mentions of the old support email
This replaces all the mentions of the old support email
(RODAsupport@odamanagement.org) with the new one
(support@beisodahelp.zendesk.com)

--- a/app/views/pages/terms_of_service.html.haml
+++ b/app/views/pages/terms_of_service.html.haml
@@ -29,7 +29,7 @@
         This Service is operated by
         = link_to "the Department for Business, Energy and Industrial Strategy", "https://www.gov.uk/government/organisations/department-for-business-energy-and-industrial-strategy", class: "govuk-link"
         ('we', 'our', or 'us'). You can contact us using the following email address:
-        = link_to "RODAsupport@odamanagement.org", "mailto:RODAsupport@odamanagement.org", class: "govuk-link"
+        = link_to "support@beisodahelp.zendesk.com", "mailto:support@beisodahelp.zendesk.com", class: "govuk-link"
 
       %h3.govuk-heading-s
         Validity of these General Terms
@@ -68,7 +68,7 @@
 
       %p.govuk-body
         If you know or suspect that anyone other than you knows your user identification code or password, you must promptly notify us at
-        = link_to "RODAsupport@odamanagement.org", "mailto:RODAsupport@odamanagement.org", class: "govuk-link"
+        = link_to "support@beisodahelp.zendesk.com", "mailto:support@beisodahelp.zendesk.com", class: "govuk-link"
 
       %p.govuk-body
         We reserve the right to restrict or deny you access to all or some parts of the Service if, in our opinion, you have failed to comply with these General Terms.
