--- a/app/views/report_mailer/_footer.text.erb
+++ b/app/views/report_mailer/_footer.text.erb
@@ -2,7 +2,7 @@
 
 If you need assistance please contact RODA support at:
 
-RODAsupport@odamanagement.org
+support@beisodahelp.zendesk.com
 
 Or visit the BEIS ODA Help centre:
 
