--- a/app/views/pages/accessibility_statement.html.haml
+++ b/app/views/pages/accessibility_statement.html.haml
@@ -27,7 +27,7 @@
       %h2.govuk-heading-m
         What to do if you can’t access parts of this service
       %p.govuk-body
-        If you need information for this service in a different format or cannot use the service and would like to report an accessibility problem, contact us at <a href="mailto:RODAsupport@odamanagement.org" class="govuk-link">RODAsupport@odamanagement.org</a>
+        If you need information for this service in a different format or cannot use the service and would like to report an accessibility problem, contact us at <a href="mailto:support@beisodahelp.zendesk.com" class="govuk-link">support@beisodahelp.zendesk.com</a>
       %p.govuk-body
         We’ll consider your request and get back to you in 5 days.
       %h2.govuk-heading-m
