Fix matched effort edit page title

--- a/app/views/staff/matched_efforts/edit.html.haml
+++ b/app/views/staff/matched_efforts/edit.html.haml
@@ -1,4 +1,4 @@
-= content_for :page_title_prefix, t("page_title.matched_effort.new")
+= content_for :page_title_prefix, t("page_title.matched_effort.edit")
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
