--- a/app/views/staff/activity_financials/show.html.haml
+++ b/app/views/staff/activity_financials/show.html.haml
@@ -58,26 +58,26 @@
         .govuk-grid-column-full
           .panel#transfers
             %h2.govuk-heading-l
-              = t("page_title.transfer.index")
+              = t("page_title.outgoing_transfer.index")
 
               - if policy(@activity).create_transfer?
                 %p.govuk-body
                   Transfer funds to another delivery partner activity
 
-                = link_to "Transfer fund", new_activity_transfer_path(@activity), class: "govuk-button"
+                = link_to "Transfer fund", new_activity_outgoing_transfer_path(@activity), class: "govuk-button"
 
             - if @transfers.count > 0
               %table.govuk-table
                 %thead.govuk-table__head
                   %tr.govuk-table__row
                     %th.govuk-table__header{scope: "col"}
-                      =t("fields.transfer.financial_quarter_and_year")
+                      =t("fields.outgoing_transfer.financial_quarter_and_year")
                     %th.govuk-table__header{scope: "col"}
-                      =t("fields.transfer.receiving_organisation")
+                      =t("fields.outgoing_transfer.receiving_organisation")
                     %th.govuk-table__header{scope: "col"}
-                      =t("fields.transfer.destination")
+                      =t("fields.outgoing_transfer.destination")
                     %th.govuk-table__header{scope: "col"}
-                      =t("fields.transfer.transfer_amount")
+                      =t("fields.outgoing_transfer.transfer_amount")
                     %th.govuk-table__header{scope: "col"}
                 %tbody.govuk-table__body
                   - @transfers.each do |transfer|
@@ -88,6 +88,6 @@
                       %td.govuk-table__cell= transfer.value
                       %td.govuk-table__cell
                         - if policy(transfer).update?
-                          = link_to "Edit", edit_activity_transfer_path(@activity.id, transfer.id)
+                          = link_to "Edit", edit_activity_outgoing_transfer_path(@activity.id, transfer.id)
 
 
