--- a/app/views/staff/outgoing_transfers/_form.html.haml
+++ b/app/views/staff/outgoing_transfers/_form.html.haml
@@ -2,10 +2,10 @@
 
 = f.govuk_text_field :destination, label: { size: 'm' }, value: destination_roda_identifier
 
-= f.govuk_fieldset legend: { text: t("form.label.transfer.financial_quarter") }, described_by: ["quarter-hint"] do
+= f.govuk_fieldset legend: { text: t("form.label.outgoing_transfer.financial_quarter") }, described_by: ["quarter-hint"] do
   %p.govuk-body
     %span.govuk-hint#quarter-hint
-      = t("form.hint.transfer.financial_quarter_and_year")
+      = t("form.hint.outgoing_transfer.financial_quarter_and_year")
   .govuk-grid-row
     .govuk-grid-column-two-thirds
       = f.govuk_collection_radio_buttons :financial_quarter,
@@ -13,13 +13,13 @@
         :id,
         :name,
         inline: true,
-        legend: { text: t("form.label.transfer.financial_quarter") , tag: :p, size: 's' }
+        legend: { text: t("form.label.outgoing_transfer.financial_quarter") , tag: :p, size: 's' }
     .govuk-grid-column-one-third
       = f.govuk_collection_select :financial_year,
         list_of_financial_years,
         :id,
         :name,
-        label: { text: t("form.label.transfer.financial_year"), tag: :p, size: 's' }
+        label: { text: t("form.label.outgoing_transfer.financial_year"), tag: :p, size: 's' }
   = f.govuk_text_field :value, label: { size: 'm' }
 
 
