--- a/app/views/staff/outgoing_transfers/new.html.haml
+++ b/app/views/staff/outgoing_transfers/new.html.haml
@@ -1,4 +1,4 @@
-=content_for :page_title_prefix, t("page_title.transfer.new")
+=content_for :page_title_prefix, t("page_title.outgoing_transfer.new")
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
@@ -7,13 +7,13 @@
         = @source_activity.title
 
       %h2.govuk-heading-l
-        = t("page_title.transfer.new")
+        = t("page_title.outgoing_transfer.new")
 
       %p.govuk-body
         Transfer funds to another delivery partner activity
 
-      = form_with model: @transfer, url: activity_transfers_path(@source_activity) do |f|
+      = form_with model: @transfer, url: activity_outgoing_transfers_path(@source_activity) do |f|
         = render partial: "form", locals: { f: f, source_activity: @source_activity }
 
-        = f.govuk_submit t("form.button.transfer.submit")
+        = f.govuk_submit t("form.button.outgoing_transfer.submit")
         = link_to t("form.link.activity.back"), organisation_activity_path(@source_activity.organisation, @source_activity), class: "govuk-button govuk-button--secondary", "data-module": "govuk-button", role: "button"
