Show the user the uploaded activities
Show the user a table view of the freshly uploaded activities, split by created and updated.

We’re showing a minimalist set of attributes (title, RODA identifier, and status), to keep this first iteration from being overwhelming.

--- a/app/views/staff/activity_uploads/update.html.haml
+++ b/app/views/staff/activity_uploads/update.html.haml
@@ -11,5 +11,10 @@
       .govuk-grid-column-full
         = render partial: "error_table"
 
-  - unless @success
+  - if @success
+    - if @activities[:created].any?
+      = render partial: "success_table", locals: { action: "created", activities: @activities[:created] }
+    - if @activities[:updated].any?
+      = render partial: "success_table", locals: { action: "updated", activities: @activities[:updated] }
+  - else
     = render partial: "upload_form"
