Set source and destination activities via the form
Rather than set the source and destination activities via the controller, we
use the new `destination_roda_identifier=` method to set the destination
activity directly via the form, and set the source activity via a hidden field.
We can then set the params we expect for the outgoing transfer directly in
the OutgoingTransfersController itself

--- a/app/views/staff/outgoing_transfers/confirm.html.haml
+++ b/app/views/staff/outgoing_transfers/confirm.html.haml
@@ -31,7 +31,8 @@
 
       = form_with model: @transfer, url: @confirmation_url do |f|
         = f.hidden_field :confirm, value: 1
-        = f.hidden_field :destination, value: @transfer.destination.roda_identifier
+        = f.hidden_field :source_id
+        = f.hidden_field :destination_roda_identifier, value: @transfer.destination_roda_identifier
         = f.hidden_field :financial_quarter
         = f.hidden_field :financial_year
         = f.hidden_field :value
