--- a/app/views/staff/outgoing_transfers/_form.html.haml
+++ b/app/views/staff/outgoing_transfers/_form.html.haml
@@ -1,25 +1,6 @@
 = f.govuk_error_summary
 
-= f.govuk_text_field :destination, label: { size: 'm' }, value: destination_roda_identifier
+= f.hidden_field :source_id, value: source_activity.id
+= f.govuk_text_field :destination_roda_identifier, label: { size: 'm' }, value: destination_roda_identifier
 
-= f.govuk_fieldset legend: { text: t("form.label.outgoing_transfer.financial_quarter") }, described_by: ["quarter-hint"] do
-  %p.govuk-body
-    %span.govuk-hint#quarter-hint
-      = t("form.hint.outgoing_transfer.financial_quarter_and_year")
-  .govuk-grid-row
-    .govuk-grid-column-two-thirds
-      = f.govuk_collection_radio_buttons :financial_quarter,
-        list_of_financial_quarters,
-        :id,
-        :name,
-        inline: true,
-        legend: { text: t("form.label.outgoing_transfer.financial_quarter") , tag: :p, size: 's' }
-    .govuk-grid-column-one-third
-      = f.govuk_collection_select :financial_year,
-        list_of_financial_years,
-        :id,
-        :name,
-        label: { text: t("form.label.outgoing_transfer.financial_year"), tag: :p, size: 's' }
-  = f.govuk_text_field :value, label: { size: 'm' }
-
-
+= render partial: "staff/shared/transfers/form", locals: { f: f }
