--- a/app/views/staff/activity_financials/show.html.haml
+++ b/app/views/staff/activity_financials/show.html.haml
@@ -54,40 +54,6 @@
             = render partial: "staff/shared/activities/transactions",
               locals: { activity: @activity, transaction_presenters: @transaction_presenters }
 
-      .govuk-grid-row
-        .govuk-grid-column-full
-          .panel#transfers
-            %h2.govuk-heading-l
-              = t("page_title.outgoing_transfer.index")
-
-              - if policy(@activity).create_transfer?
-                %p.govuk-body
-                  Transfer funds to another delivery partner activity
-
-                = link_to "Transfer fund", new_activity_outgoing_transfer_path(@activity), class: "govuk-button"
-
-            - if @transfers.count > 0
-              %table.govuk-table
-                %thead.govuk-table__head
-                  %tr.govuk-table__row
-                    %th.govuk-table__header{scope: "col"}
-                      =t("fields.outgoing_transfer.financial_quarter_and_year")
-                    %th.govuk-table__header{scope: "col"}
-                      =t("fields.outgoing_transfer.receiving_organisation")
-                    %th.govuk-table__header{scope: "col"}
-                      =t("fields.outgoing_transfer.destination")
-                    %th.govuk-table__header{scope: "col"}
-                      =t("fields.outgoing_transfer.transfer_amount")
-                    %th.govuk-table__header{scope: "col"}
-                %tbody.govuk-table__body
-                  - @transfers.each do |transfer|
-                    %tr.govuk-table__row
-                      %td.govuk-table__cell= transfer.financial_quarter_and_year
-                      %td.govuk-table__cell= transfer.destination.organisation.name
-                      %td.govuk-table__cell= transfer.destination.roda_identifier
-                      %td.govuk-table__cell= transfer.value
-                      %td.govuk-table__cell
-                        - if policy(transfer).update?
-                          = link_to "Edit", edit_activity_outgoing_transfer_path(@activity.id, transfer.id)
-
+      = render partial: "staff/shared/transfers/index", locals: { activity: @activity, transfer_type: "outgoing_transfer", transfers: @outgoing_transfers }
+      = render partial: "staff/shared/transfers/index", locals: { activity: @activity, transfer_type: "incoming_transfer", transfers: @incoming_transfers }
 
