--- a/app/views/staff/outgoing_transfers/new.html.haml
+++ b/app/views/staff/outgoing_transfers/new.html.haml
@@ -10,7 +10,7 @@
         = t("page_title.outgoing_transfer.new")
 
       %p.govuk-body
-        Transfer funds to another delivery partner activity
+        = t("intro.outgoing_transfer")
 
       = form_with model: @transfer, url: activity_outgoing_transfers_path(@source_activity) do |f|
         = render partial: "form", locals: { f: f, source_activity: @source_activity }
