Migrate existing dependent field logic to FieldInference
We currently have rules about the `aid_type` field. When it is set to
certain values, we can infer the values of `collaboration_type` and
`ftsc_applies` from it. This logic is currently implemented in the
individual step-handling logic in Staff::ActivityFormsController and
Activity::Updater using the `can_infer_collaboration_type`,
`can_infer_fstc`, `collaboration_type_from_aid_type` and
`fstc_from_aid_type` helper functions.

Here we replace those implementations with the use of a FieldInference
instance populated from the `aid_type` codelist, and accessible as
`Activity::Inference.service`. This updates any dependent fields as
required and deals with skipping steps and hiding links when fields are
non-editable.

--- a/app/views/staff/shared/activities/_activity.html.haml
+++ b/app/views/staff/shared/activities/_activity.html.haml
@@ -282,7 +282,7 @@
       %dd.govuk-summary-list__value
         = activity_presenter.collaboration_type
       %dd.govuk-summary-list__actions
-        - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :collaboration_type) && !can_infer_collaboration_type?(@activity.aid_type)
+        - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :collaboration_type) && Activity::Inference.service.editable?(@activity, :collaboration_type)
           = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:collaboration_type)}"), activity_step_path(activity_presenter, :collaboration_type), t("summary.label.activity.collaboration_type"))
 
   - unless activity_presenter.fund?
@@ -321,7 +321,7 @@
       - unless activity_presenter.fstc_applies.to_s.blank?
         = t("summary.label.activity.fstc_applies.#{activity_presenter.fstc_applies}")
     %dd.govuk-summary-list__actions
-      - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :fstc_applies) && !can_infer_fstc?(@activity.aid_type)
+      - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :fstc_applies) && Activity::Inference.service.editable?(@activity, :fstc_applies)
         = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:fstc_applies)}"), activity_step_path(activity_presenter, :fstc_applies), t("summary.label.activity.fstc_applies"))
 
   - if activity_presenter.project? || activity_presenter.third_party_project?
