--- a/app/views/staff/shared/xml/_activity.xml.haml
+++ b/app/views/staff/shared/xml/_activity.xml.haml
@@ -71,9 +71,9 @@
   - if budgets
     - budgets.each do |budget|
       = render partial: "staff/shared/xml/budget", locals: { budget: BudgetXmlPresenter.new(budget) }
-  -if planned_disbursements
-    - planned_disbursements.each do |planned_disbursement|
-      = render partial: "staff/shared/xml/planned_disbursement", locals: { planned_disbursement: PlannedDisbursementXmlPresenter.new(planned_disbursement) }
+  -if forecasts
+    - forecasts.each do |forecast|
+      = render partial: "staff/shared/xml/planned_disbursement", locals: { forecast: ForecastXmlPresenter.new(forecast) }
   %capital-spend{"percentage" => activity.capital_spend}/
   - if transactions
     - transactions.each do |transaction|
