Infer channel of delivery code from collaboration type
We have the following rules for the inference between these fields:

- If `collaboration_type` is `1` then `channel_of_delivery_code` can be
  any of the values allowed by BEIS
- If `collaboration_type` is `2` then `channel_of_delivery_code` must be
  `40000`
- If `collaboration_type` is `3` then `channel_of_delivery_code` may be
  either `20000` or `51000`

We encode this by adding these values to the `collaboration_type`
codelist, and using this code to turn that data into inference rules:

    Codelist.new(source: "beis", type: "collaboration_type").each do |item|
      allowed_values = item["channel_of_delivery_code"]
      rule = service.on(:collaboration_type, item["code"])

      case allowed_values
      when String then rule.fix(:channel_of_delivery_code, allowed_values)
      when Array then rule.restrict(:channel_of_delivery_code, allowed_values)
      end
    end

We modify the `channel_of_delivery_codes` helper to take an optional
Activity and use the inference rules to give us the allowed values for
that activity.

The other changes here put in hooks using Activity::Inference in the
following places:

- setting the value of `collaboration_type` in Activity::Updater
- skipping the `channel_of_delivery_code` step in
  Staff::ActivityFormsController
- Showing only the allowed values on the `channel_of_delivery_code` step
- Hiding the 'edit' link for `channel_of_delivery_code` when it cannot
  be edited

--- a/app/views/staff/activity_forms/channel_of_delivery_code.html.haml
+++ b/app/views/staff/activity_forms/channel_of_delivery_code.html.haml
@@ -1,6 +1,6 @@
 = render layout: "wrapper" do |f|
   = f.govuk_collection_radio_buttons :channel_of_delivery_code,
-                                      channel_of_delivery_codes,
+                                      channel_of_delivery_codes(@activity),
                                       :code,
                                       :name,
                                       legend: { tag: 'h1', size: 'xl', text: t("form.legend.activity.channel_of_delivery_code") }
