--- a/app/views/staff/shared/activities/_activity.html.haml
+++ b/app/views/staff/shared/activities/_activity.html.haml
@@ -413,7 +413,7 @@
       %dd.govuk-summary-list__value
         = activity_presenter.channel_of_delivery_code
       %dd.govuk-summary-list__actions
-        - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :channel_of_delivery_code)
+        - if policy(activity_presenter).update? && step_is_complete_or_next?(activity: activity_presenter, step: :channel_of_delivery_code) && Activity::Inference.service.editable?(@activity, :channel_of_delivery_code)
           = a11y_action_link(t("default.link.#{activity_presenter.call_to_action(:channel_of_delivery_code)}"), activity_step_path(activity_presenter, :channel_of_delivery_code), t("summary.label.activity.channel_of_delivery_code"))
 
   .govuk-summary-list__row.oda_eligibility
