Remove Report#activities_created
This has been superseded by the new

`Report::has_many :new_activities`

association, which finds all activities with a matching
`Activity#originating_report_id` foreign key.

--- a/app/views/staff/reports/show.html.haml
+++ b/app/views/staff/reports/show.html.haml
@@ -24,7 +24,7 @@
                   %dt.govuk-summary-list__key
                     = t("page_content.tab_content.summary.activities_added")
                   %dd.govuk-summary-list__value
-                    = @report_presenter.activities_created.count
+                    = @report_presenter.new_activities.count
                 .govuk-summary-list__row
                   %dt.govuk-summary-list__key
                     = t("page_content.tab_content.summary.activities_updated")
