Change activity routing
Now we no longer have the single view of activities with its drop down
filter, we want to change the routing to:

- show a delivery partner activities at `/organisation/id/activities`
- when beis view this route, the delivery partner list is shown, linking
  to individual delivery partner activities views
- support the 'current' and 'historic' activity split

We also tweak the activity index page to show the organisation name
which aids BEIS users at no real cost to delivery partners and show the
activity search widget.

With this in place the activity listing on the organisation show page
are no longer relevant and have been removed.

--- a/app/views/staff/activities/index.html.haml
+++ b/app/views/staff/activities/index.html.haml
@@ -1,11 +1,15 @@
-= content_for :page_title_prefix, t("document_title.activity.index")
+= content_for :page_title_prefix, t("document_title.activity.index", delivery_partner_name: @organisation.name)
 
 %main.govuk-main-wrapper#main-content{ role: "main" }
   .govuk-grid-row
     .govuk-grid-column-full
       %h1.govuk-heading-xl
-        = t("page_title.activity.index")
+        Activities
+
+      = render partial: "staff/searches/form"
 
   .govuk-grid-row.activity-page
     .govuk-grid-column-full
+      %h2.govuk-heading-m
+        = t("document_title.activity.index", delivery_partner_name: @organisation.name)
       = render partial: "staff/shared/activities/table", locals: { activities: @grouped_activities }
