--- a/app/views/staff/shared/organisations/_organisations_activities_table.html.haml
+++ b/app/views/staff/shared/organisations/_organisations_activities_table.html.haml
@@ -17,4 +17,4 @@
         %td.govuk-table__cell
           = delivery_partner_organisation.beis_organisation_reference
         %td.govuk-table__cell
-          = a11y_action_link t("table.actions.activity.view_activities"), activities_path(params: { organisation_id: delivery_partner_organisation }), "for #{delivery_partner_organisation.name}", ["govuk-link", "govuk-link--no-visited-state"]
+          = a11y_action_link  t("table.actions.activity.view_activities"), organisation_activities_path(delivery_partner_organisation), "for #{delivery_partner_organisation.name}", ["govuk-link", "govuk-link--no-visited-state"]
