Rename the RODA ID compound column
We currently store the RODA identifier in a column called
`roda_identifier_compound`. As we will no longer be
asking for an activity’s fragment identifier, it no longer
makes sense to call it a “compound”, so we’re renaming
it to be just the identifier

--- a/app/views/staff/organisations/_grouped_programmes.html.haml
+++ b/app/views/staff/organisations/_grouped_programmes.html.haml
@@ -13,7 +13,7 @@
                 %th{scope: "col", class: "govuk-table__header govuk-!-width-one-half"}
                   = Activity.human_attribute_name(:title)
                 %th{scope: "col", class: "govuk-table__header"}
-                  = Activity.human_attribute_name(:roda_identifier_compound)
+                  = Activity.human_attribute_name(:roda_identifier)
                 %th{scope: "col", class: "govuk-table__header"}
 
             %tbody{class: "govuk-table__body"}
@@ -22,7 +22,7 @@
                   %td{scope: "row", class: "govuk-table__cell"}
                     = activity.title
                   %td{class: "govuk-table__cell"}
-                    = activity.roda_identifier_compound
+                    = activity.roda_identifier
                   %td{class: "govuk-table__cell"}
                     - if policy(activity).create_child?
                       = link_to(t("action.activity.add_child"), organisation_activity_children_path(activity.extending_organisation, activity), method: :post, class: "govuk-link govuk-!-margin-right-4")
