Use `a11y_action_link` to make an accessible link
As there is currently only one download on the page, it's
probably fine to just have the link as "Download", but as
we add more files, we need to be clearer about what
exactly the user will be downloading. The
`a11y_action_link` method appends some context in a
hidden span tag for screen readers.

--- a/app/views/staff/exports/organisations/show.html.haml
+++ b/app/views/staff/exports/organisations/show.html.haml
@@ -19,4 +19,4 @@
             %td.govuk-table__cell All transactions
             %td.govuk-table__cell CSV
             %td.govuk-table__cell
-              = link_to t("table.export.organisation.download"), transactions_exports_organisation_path(@organisation, format: "csv"), class: "govuk-link"
+              = a11y_action_link t("table.export.organisation.download"), transactions_exports_organisation_path(@organisation, format: "csv"), "all transactions"
