--- a/app/views/staff/reports/actuals.html.haml
+++ b/app/views/staff/reports/actuals.html.haml
@@ -41,3 +41,4 @@
             %hr.govuk-section-break.govuk-section-break--l.govuk-section-break--visible
 
           = render partial: "shared/transactions/transactions_by_activity"
+          = render partial: "shared/refunds/refunds_by_activity"
