Use the current_user instance variable
As all controllers inherit from the ApplicationController and that
controller includes the `Auth` concern, we can rely on the @current_user
instance variable being available in most circumstances.

Using an instance variable can make using view specs simpler as we can
`assign` them simply and easily.

Making this change lays the ground work for the next.

I've kept this commit separate to document my reasoning for this change.

--- a/app/views/staff/home/delivery_partner.html.haml
+++ b/app/views/staff/home/delivery_partner.html.haml
@@ -8,7 +8,7 @@
         = render partial: "staff/shared/reports/table", locals: { reports: @reports, type: "current" }
 
       .govuk-body
-        = link_to t("page_content.reports.approved_reports_link"), organisation_reports_path(organisation_id: current_user.organisation_id, anchor: "approved"), class: "govuk-link"
+        = link_to t("page_content.reports.approved_reports_link"), organisation_reports_path(organisation_id: @current_user.organisation_id, anchor: "approved"), class: "govuk-link"
 
   .govuk-grid-row
     .govuk-grid-column-full
